tests/assets/test_suites/w3c_wsdl20/documents/good/CreditCardFaults-1G/use-credit-card-faults.wsdl
<?xml version="1.0"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/CreditCardFaults-1G/use-credit-card-faults.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description
	targetNamespace="http://greath.example.com/2004/wsdl/resSvc"
	xmlns:tns="http://greath.example.com/2004/wsdl/resSvc"
	xmlns:ghns="http://greath.example.com/2004/schemas/resSvc"
	xmlns:cc="http://finance.example.com/CreditCards/wsdl"
	xmlns="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<documentation>
		Description: The definition of the reservation Web service of
		GreatH hotel. Author: Joe Somebody Date: 05/17/2004
	</documentation>

	<import namespace="http://finance.example.com/CreditCards/wsdl"
		location="credit-card-faults.wsdl" />

	<types>

		<xs:import
			namespace="http://greath.example.com/2004/schemas/resSvc"
			schemaLocation="resSvc.xsd" />

	</types>

	<interface name="reservation" extends="cc:creditCardFaults">

		<fault name="invalidDataFault" element="ghns:invalidDataError" />

		<operation name="checkAvailability"
			pattern="http://www.w3.org/ns/wsdl/in-out">

			<input messageLabel="In" element="ghns:checkAvailability" />

			<output messageLabel="Out"
				element="ghns:checkAvailabilityResponse" />

			<outfault ref="tns:invalidDataFault" messageLabel="Out" />


		</operation>

		<operation name="makeReservation"
			pattern="http://www.w3.org/ns/wsdl/in-out">

			<input messageLabel="In" element="ghns:makeReservation" />

			<output messageLabel="Out"
				element="ghns:makeReservationResponse" />

			<outfault ref="tns:invalidDataFault" messageLabel="Out" />

			<outfault ref="cc:cancelledCreditCard" messageLabel="Out" />
			<outfault ref="cc:expiredCreditCard" messageLabel="Out" />
			<outfault ref="cc:invalidCreditCardNumber"
				messageLabel="Out" />
			<outfault ref="cc:invalidExpirationDate" messageLabel="Out" />

		</operation>

	</interface>

</description>
